[package]
name = "colligerenet-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/VANADAIN/colligerenet-sdk"

[dependencies]
colligerenet-api = { git = "ssh://git@github.com/VANADAIN/colligerenet.git" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.46.1", features = ["io-util", "net", "rt"] }
